--- a/index.html
+++ b/index.html
@@ -144,28 +144,32 @@
                       <svg class="team-link-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-instagram-2"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
                       <svg class="team-link-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-twitter-1"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
                       <svg class="team-link-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-facebook-1"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
                       <svg class="team-link-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-linkedin-1"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -187,28 +191,32 @@
                       <svg class="team-link-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-instagram-2"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
                       <svg class="team-link-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-twitter-1"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
                       <svg class="team-link-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-facebook-1"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
                       <svg class="team-link-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-linkedin-1"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -230,28 +238,32 @@
                       <svg class="team-link-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-instagram-2"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
                       <svg class="team-link-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-twitter-1"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
                       <svg class="team-link-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-facebook-1"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
                       <svg class="team-link-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-linkedin-1"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -273,27 +285,32 @@
                       <svg class="team-link-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-instagram-2"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
                       <svg class="team-link-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-twitter-1"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
                       <svg class="team-link-icon" width="16" height="16">
                         <use
-                          href="./images/icons.svg#icon-facebook-1"></use></svg></a>
+                          href="./images/icons.svg#icon-facebook-1"
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
                       <svg class="team-link-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-linkedin-1"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -435,7 +452,8 @@
       <div class="container footer-div">
         <div class="footer-promo">
           <a href="./index.html" class="footer-logo-link">
-            Web<span class="logo-link-white">Studio</span></a>
+            Web<span class="logo-link-white">Studio</span></a
+          >
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
@@ -447,74 +465,106 @@
             <li class="footer-cos-item">
               <a href="" class="footer-soc-link">
                 <svg class="footer-soc-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram-2"></use></svg></a>
+                  <use href="./images/icons.svg#icon-instagram-2"></use></svg
+              ></a>
             </li>
             <li class="footer-cos-item">
               <a href="" class="footer-soc-link">
                 <svg class="footer-soc-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter-1"></use></svg></a>
+                  <use href="./images/icons.svg#icon-twitter-1"></use></svg
+              ></a>
             </li>
             <li class="footer-cos-item">
               <a href="" class="footer-soc-link">
                 <svg class="footer-soc-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook-1"></use></svg></a>
+                  <use href="./images/icons.svg#icon-facebook-1"></use></svg
+              ></a>
             </li>
             <li class="footer-cos-item">
               <a href="" class="footer-soc-link">
                 <svg class="footer-soc-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin-1"></use></svg></a>
+                  <use href="./images/icons.svg#icon-linkedin-1"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
-      </div>
-      <div class="backdrop is-open">
-        <div class="modal">
-          <button type="button" class="modal-close-btn">
-            <svg class="modal-close-icon"  width="8px" height="8px">
-             <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
-            </svg>
-          </button>
-            <p class="modal-title">Leave your contacts and we will call you back</p>
-          <form class="modal-form">
+
+        <div class="backdrop is-open">
+          <div class="modal">
+            <button type="button" class="modal-close-btn">
+              <svg class="modal-close-icon" width="8px" height="8px">
+                <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+              </svg>
+            </button>
+            <p class="modal-title">
+              Leave your contacts and we will call you back
+            </p>
+            <form class="modal-form">
               <div class="modal-form-box">
-              <label class="form-label" for="user-name">Name</label>
-              <div class="modal-form-div">
-                <svg width="18" height="24" class="modal-form-svg">
-                  <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
-                </svg>
-              <input type="text" name="user-name" class="modal-input-name">
+                <label class="form-label" for="user-name">Name</label>
+                <div class="modal-form-div">
+                  <svg width="18" height="24" class="modal-form-svg">
+                    <use
+                      href="./images/icons.svg#icon-person-black-18dp-1"
+                    ></use>
+                  </svg>
+                  <input
+                    type="text"
+                    name="user-name"
+                    class="modal-input-name"
+                  />
+                </div>
               </div>
-            </div>
-            <div class="modal-form-box">
-              <label class="form-label" for="user-tel">Phone</label>
-              <div class="modal-form-div">
-                <svg width="18" height="24" class="modal-form-svg">
-                  <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
-                </svg>
-                <input type="tel" name="user-tel" class="modal-input-name">
+              <div class="modal-form-box">
+                <label class="form-label" for="user-tel">Phone</label>
+                <div class="modal-form-div">
+                  <svg width="18" height="24" class="modal-form-svg">
+                    <use
+                      href="./images/icons.svg#icon-phone-black-18dp-1"
+                    ></use>
+                  </svg>
+                  <input type="tel" name="user-tel" class="modal-input-name" />
+                </div>
               </div>
-            </div>
-            <div class="modal-form-box">
-              <label class="form-label" for="user-email">Email</label>
-              <div class="modal-form-div">
-                <svg width="18" height="24" class="modal-form-svg">
-                  <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
-                </svg>
-                <input type="email" name="user-email" class="modal-input-name">
+              <div class="modal-form-box">
+                <label class="form-label" for="user-email">Email</label>
+                <div class="modal-form-div">
+                  <svg width="18" height="24" class="modal-form-svg">
+                    <use
+                      href="./images/icons.svg#icon-email-black-18dp-1"
+                    ></use>
+                  </svg>
+                  <input
+                    type="email"
+                    name="user-email"
+                    class="modal-input-name"
+                  />
+                </div>
               </div>
-            </div>
-            <div class="modal-form-box">
-              <label class="form-label" for="user-comment">Comment</label>
-              <textarea name="user-comment" rows="5" class="modal-input-comment" placeholder="Text input"></textarea>
-            </div>
-            <div class="form-checkbox">
-            <label class="form-label">
-              <input type="checkbox" name="privacy" class="privacy-input" value="privacy">
-            I accept the terms and conditions of the <a href="" class="privacy-policy-link">Privacy Policy</a>
-            </label>
-            </div>
-            <button type="submit" class="form-btn">Send</button>
-          </form>
+              <div class="modal-form-box">
+                <label class="form-label" for="user-comment">Comment</label>
+                <textarea
+                  name="user-comment"
+                  rows="5"
+                  class="modal-input-comment"
+                  placeholder="Text input"
+                ></textarea>
+              </div>
+              <div class="form-checkbox">
+                <label class="form-label">
+                  <input
+                    type="checkbox"
+                    name="privacy"
+                    class="privacy-input"
+                    value="privacy"
+                  />
+                  I accept the terms and conditions of the
+                  <a href="" class="privacy-policy-link">Privacy Policy</a>
+                </label>
+              </div>
+              <button type="submit" class="form-btn">Send</button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
