--- a/index.html
+++ b/index.html
@@ -488,85 +488,100 @@
             </li>
           </ul>
         </div>
-
-        <div class="backdrop is-open">
-          <div class="modal">
-            <button type="button" class="modal-close-btn">
-              <svg class="modal-close-icon" width="8px" height="8px">
-                <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
-              </svg>
-            </button>
-            <p class="modal-title">
-              Leave your contacts and we will call you back
-            </p>
-            <form class="modal-form">
-              <div class="modal-form-box">
-                <label class="form-label" for="user-name">Name</label>
-                <div class="modal-form-div">
-                  <svg width="18" height="24" class="modal-form-svg">
-                    <use
-                      href="./images/icons.svg#icon-person-black-18dp-1"
-                    ></use>
-                  </svg>
-                  <input
-                    type="text"
-                    name="user-name"
-                    class="modal-input-name"
-                  />
-                </div>
-              </div>
-              <div class="modal-form-box">
-                <label class="form-label" for="user-tel">Phone</label>
-                <div class="modal-form-div">
-                  <svg width="18" height="24" class="modal-form-svg">
-                    <use
-                      href="./images/icons.svg#icon-phone-black-18dp-1"
-                    ></use>
-                  </svg>
-                  <input type="tel" name="user-tel" class="modal-input-name" />
-                </div>
-              </div>
-              <div class="modal-form-box">
-                <label class="form-label" for="user-email">Email</label>
-                <div class="modal-form-div">
-                  <svg width="18" height="24" class="modal-form-svg">
-                    <use
-                      href="./images/icons.svg#icon-email-black-18dp-1"
-                    ></use>
-                  </svg>
-                  <input
-                    type="email"
-                    name="user-email"
-                    class="modal-input-name"
-                  />
-                </div>
-              </div>
-              <div class="modal-form-box">
-                <label class="form-label" for="user-comment">Comment</label>
-                <textarea
-                  name="user-comment"
-                  rows="5"
-                  class="modal-input-comment"
-                  placeholder="Text input"
-                ></textarea>
-              </div>
-              <div class="form-checkbox">
-                <label class="form-label">
-                  <input
-                    type="checkbox"
-                    name="privacy"
-                    class="privacy-input"
-                    value="privacy"
-                  />
-                  I accept the terms and conditions of the
-                  <a href="" class="privacy-policy-link">Privacy Policy</a>
-                </label>
-              </div>
-              <button type="submit" class="form-btn">Send</button>
-            </form>
-          </div>
+        <div class="subscribe-div">
+          <p class="footer-form-title">Subscribe</p>
+          <form class="footer-form">
+<label for="" class="footer-label">
+<input type="email" placeholder="E-mail" class="footer-input">
+<button type="submit" class="footer-btn">Subscribe
+  <svg class="footer-svg-send" width="24" height="20">
+    <use href="./images/icons.svg#icon-icon-send">
+    </use>
+    </svg>
+</button>
+</label>
+          </form>
         </div>
       </div>
     </footer>
+
+
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button type="button" class="modal-close-btn">
+          <svg class="modal-close-icon" width="8px" height="8px">
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+          </svg>
+        </button>
+        <p class="modal-title">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="modal-form">
+          <div class="modal-form-box">
+            <label class="form-label" for="user-name">Name</label>
+            <div class="modal-form-div">
+              <svg width="18" height="24" class="modal-form-svg">
+                <use
+                  href="./images/icons.svg#icon-person-black-18dp-1"
+                ></use>
+              </svg>
+              <input
+                type="text"
+                name="user-name"
+                class="modal-input-name"
+              />
+            </div>
+          </div>
+          <div class="modal-form-box">
+            <label class="form-label" for="user-tel">Phone</label>
+            <div class="modal-form-div">
+              <svg width="18" height="24" class="modal-form-svg">
+                <use
+                  href="./images/icons.svg#icon-phone-black-18dp-1"
+                ></use>
+              </svg>
+              <input type="tel" name="user-tel" class="modal-input-name" />
+            </div>
+          </div>
+          <div class="modal-form-box">
+            <label class="form-label" for="user-email">Email</label>
+            <div class="modal-form-div">
+              <svg width="18" height="24" class="modal-form-svg">
+                <use
+                  href="./images/icons.svg#icon-email-black-18dp-1"
+                ></use>
+              </svg>
+              <input
+                type="email"
+                name="user-email"
+                class="modal-input-name"
+              />
+            </div>
+          </div>
+          <div class="modal-form-box">
+            <label class="form-label" for="user-comment">Comment</label>
+            <textarea
+              name="user-comment"
+              rows="5"
+              class="modal-input-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="form-checkbox">
+            <label class="form-label">
+              <input
+                type="checkbox"
+                name="privacy"
+                class="privacy-input"
+                value="privacy"
+              />
+              I accept the terms and conditions of the
+              <a href="" class="privacy-policy-link">Privacy Policy</a>
+            </label>
+          </div>
+          <button type="submit" class="form-btn">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
