--- a/index.html
+++ b/index.html
@@ -448,127 +448,127 @@
       </section>
     </main>
 
-    <footer class="footer">
-      <div class="container footer-div">
-        <div class="footer-promo">
-          <a href="./index.html" class="footer-logo-link">
-            Web<span class="logo-link-white">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
+    <footer class="footer-board">
+      <div class="container footer-list">
+        <div class="footer-list-text">
+          <a class="logo-footer" href="/">Web<span class="logo-footer-span">Studio</span></a>
+          <p class="footer-end">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
           </p>
         </div>
-        <div class="footer-soc">
-          <p class="footer-soc-title">Social media</p>
-          <ul class="footer-soc-list">
-            <li class="footer-cos-item">
-              <a href="" class="footer-soc-link">
-                <svg class="footer-soc-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram-2"></use></svg
-              ></a>
+        <div class="footer-list-social">
+          <p class="footer-name-social">Social media</p>
+          <ul class="footer-icon-list">
+            <li class="footer-icon-item">
+              <a href="" class="footer-icon-link">
+                <svg class="footer-icon-soc" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-cos-item">
-              <a href="" class="footer-soc-link">
-                <svg class="footer-soc-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter-1"></use></svg
-              ></a>
+            <li class="footer-icon-item">
+              <a href="" class="footer-icon-link">
+                <svg class="footer-icon-soc" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-cos-item">
-              <a href="" class="footer-soc-link">
-                <svg class="footer-soc-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook-1"></use></svg
-              ></a>
+            <li class="footer-icon-item">
+              <a href="" class="footer-icon-link">
+                <svg class="footer-icon-soc" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-cos-item">
-              <a href="" class="footer-soc-link">
-                <svg class="footer-soc-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin-1"></use></svg
-              ></a>
+            <li class="footer-icon-item">
+              <a href="" class="footer-icon-link">
+                <svg class="footer-icon-soc" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
-        <div class="subscribe-div">
-          <p class="footer-form-title">Subscribe</p>
+        <div class="footer-info">
+          <p class="footer-form-text">Subscribe</p>
           <form class="footer-form">
-            <label for="" class="footer-label">
-              <input type="email" placeholder="E-mail" class="footer-input" />
-              <button type="submit" class="footer-btn">
-                Subscribe
-                <svg class="footer-svg-send" width="24" height="20">
-                  <use href="./images/icons.svg#icon-icon-send"></use>
-                </svg>
-              </button>
-            </label>
+            <label class="footer-label"
+              ><input type="email" name="footer-email" class="footer-input" placeholder="E-mail"
+            /></label>
+            <button type="submit" class="footer-btn">
+              Subscribe
+              <svg class="form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
     </footer>
-
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
-        <button type="button" class="modal-close-btn">
-          <svg class="modal-close-icon" width="8px" height="8px">
+        <button type="button" class="modal-open-btn">
+          <svg class="modal-btn-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <div class="modal-form-box">
-            <label class="form-label" for="user-name">Name</label>
-            <div class="modal-form-div">
-              <input type="text" name="user-name" class="modal-input-name" />
-              <svg width="18" height="24" class="modal-form-svg">
+          <div class="modal-field">
+            <label for="user-name" class="modal-label">Name</label>
+            <div class="model-input-wrap">
+              <input type="text" class="modal-input" name="user-name" id="user-name" />
+              <svg class="modal-field-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-form-box">
-            <label class="form-label" for="user-tel">Phone</label>
-            <div class="modal-form-div">
-              <input type="tel" name="user-tel" class="modal-input-name" />
-              <svg width="18" height="24" class="modal-form-svg">
+          <div class="modal-field">
+            <label for="user-phone" class="modal-label">Phone</label>
+            <div class="model-input-wrap">
+              <input type="tel" class="modal-input" name="user-phone" id="user-phone" />
+              <svg class="modal-field-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
-              
             </div>
           </div>
-          <div class="modal-form-box">
-            <label class="form-label" for="user-email">Email</label>
-            <div class="modal-form-div">
-              <input type="email" name="user-email" class="modal-input-name" />
-              <svg width="18" height="24" class="modal-form-svg">
+          <div class="modal-field">
+            <label for="user-email" class="modal-label">Email</label>
+            <div class="model-input-wrap">
+              <input type="email" class="modal-input" name="user-email" id="user-email" />
+              <svg class="modal-field-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-form-box">
-            <label class="form-label" for="user-comment">Comment</label>
+          <div class="modal-texarea">
+            <label for="user-comment" class="modal-label">Comment</label>
             <textarea
               name="user-comment"
-              rows="5"
-              class="modal-input-comment"
+              id="user-comment"
               placeholder="Text input"
+              class="modal-text"
             ></textarea>
           </div>
-          <div class="modal-field-checkbox">
+          <div class="modal-checkbox">
             <input
-              class="modal-check visually-hidden"
               type="checkbox"
-              id="user-privacy"
-              value="true"
               name="user-privacy"
+              id="user-privacy"
+              class="modal-check visually-hidden"
+              value="true"
             />
             <label for="user-privacy" class="check-text"
-              ><span class="span-checkbox-text">
-                <svg width="10" height="8">
-                  <use href="./images/icons.svg#icon-check-icon"></use>
-                </svg> </span
-              >I accept the terms and conditions of the
-              <a href="" class="privacy-policy-link">Privacy Policy</a></label
+              ><span class="check-span"
+                ><svg class="check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check-icon"></use></svg
+              ></span>
+              I accept the terms and conditions of the
+              <a class="check-link" href="">Privacy Policy</a></label
             >
           </div>
-          <button type="submit" class="form-btn">Send</button>
+          <button class="modal-btn" type="button">Send</button>
         </form>
       </div>
     </div>
